# APOLLO

./: .gitignore  Makefile  README.md  README.txt  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: analysis.py  config.py  config_store.py  ftp_client.py  logging_config.py  main.py  models.py  service.py  token_store.py  utils.py
backend/scripts/: seed_demo.py
backend/tests/: test_integration.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AnalyzeToolbar.tsx  ChartPanel.tsx  DetailsPanel.tsx  MachineSelector.tsx  StatusBar.tsx
frontend/src/theme/: index.ts
